style: fixed overflowing problem

--- a/client/src/pages/AllRecipes/Recipes.module.scss
+++ b/client/src/pages/AllRecipes/Recipes.module.scss
@@ -1,4 +1,7 @@
-
+.container {
+  width: 100%;
+  overflow-x:hidden;
+}
 .header {
   background-color: #e7ab46;
   display: flex;
